# sgf

./: sgf.cabal  stack-9.6.yaml
.github/workflows/: haskell.yml
lib/Data/: SGF.hs
lib/Data/SGF/: Parse.hs  Types.hs
src/Data/SGF/Parse/: Encodings.hs  Internal.hs  Raw.hs  Util.hs
src/Data/SGF/Types/: Internal.hs
test/Unit/Data/SGF/Parse/: EncodingsSpec.hs
