cabal-version:      3.0
name:               sgf
version:            0.1.3.3
author:             Daniel Wagner daniel@wagner-home.com
maintainer:         Toni Cebrián ancechu@gmail.com
homepage:           https://github.com/tonicebrian/sgf
bug-reports:        https://github.com/tonicebrian/sgf/issues
synopsis:           SGF (Smart Game Format) parser
description:
    This is a parser for the go\/igo\/weiqi\/baduk fragment of the SGF format.
    Encodings latin-1, utf-8, and ascii are supported, and the parser strives
    to be robust to minor errors, especially those made by the most common SGF
    editors.  There are plans to support other games and pretty-printing in
    future releases.
category:           Data
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple

common shared
    build-depends:      base == 4.*,
    ghc-options:        -Wall
    default-language:   Haskell2010

library
    import:             shared
    exposed-modules:    Data.SGF,
                        Data.SGF.Parse,
                        Data.SGF.Types
    build-depends:      sgf-internal,
                        bytestring >= 0.11.5.3 && < 0.13,
                        containers >= 0.6.7 && < 0.9,
                        parsec >= 3.1.16 && < 3.2
    hs-source-dirs:     lib/

library sgf-internal
    import:             shared
    visibility:         private
    exposed-modules:    Data.SGF.Parse.Internal,
                        Data.SGF.Types.Internal,
                        Data.SGF.Parse.Encodings,
                        Data.SGF.Parse.Raw,
                        Data.SGF.Parse.Util
    build-depends:      bytestring >= 0.11.5.3 && < 0.13,
                        containers >= 0.6.7 && < 0.9,
                        encoding >= 0.8.9 && < 0.11,
                        mtl >= 2.2.2 && < 2.4,
                        transformers >= 0.5.6 && < 0.7,
                        time >= 1.12.2 && < 1.16,
                        split >= 0.2.5 && < 0.3,
                        parsec >= 3.1.16 && < 3.2
    hs-source-dirs:     src/

test-suite test
    import:             shared
    main-is:            Test.hs
    other-modules:      Unit.Data.SGF.Parse.EncodingsSpec
    build-depends:      sgf-internal,
                        hspec >= 2.10.10 && < 2.12,
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    type:               exitcode-stdio-1.0


source-repository head
    type:       git
    location:   https://github.com/tonicebrian/sgf

source-repository this
    type:       git
    location:   https://github.com/tonicebrian/sgf
    tag:        0.1.3
